# python-project-lvl4

./: .coveragerc  .gitignore  Makefile  README.md  db.sqlite3  manage.py  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: CI.yml  Ci.yml
fixtures/: test.json
locale/en/LC_MESSAGES/: django.mo  django.po
task_manager/: settings.py  urls.py  views.py
task_manager/statuses/: models.py  tests.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py
task_manager/tasks/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/fixtures/: user1.json
task_manager/tasks/migrations/: 0002_auto_20210430_0928.py  0003_task.py  0004_auto_20210517_1712.py  0005_auto_20210517_1841.py
task_manager/users/: tests.py  urls.py  views.py
templates/: base.html  home.html
templates/include/: footer.html  header.html
templates/statuses/: create.html  statuses.html  update.html  update_status.html
templates/tasks/: create_task.html  delete.html  delete_task.html  register.html  tasks.html  update.html  update_task.html  users.html
templates/tasks/statuses/: create_status.html  delete_status.html
templates/users/: delete.html  login.html  update_user.html  users.html
