[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Sergey Kornienko <skornienko29@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2"
python-dotenv = "^0.17.0"
psycopg2-binary = "^2.8.6"
gunicorn = "^20.1.0"
django-bootstrap4 = "^2.3.1"
django-modeltranslation = "^0.16.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
flake8 = "^3.9.0"
pytest-cov = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
